--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="stylesheet" href="stilus.css">
     <title>Document</title>
 </head>
 <body>
     <p>MS0424</p>
+    <h1>Ez egy Cí</h1>
+     <div class="belso">Első</div>
+     <div class="belso lebego" >second</div>
 </body>
 </html>
